# asciiPainter

./: .gitignore  CMakeLists.txt  Makefile  Makefile.vc  actions.txt  main.cpp  main.hpp  newAscii-1.txt  readme.md
agnos/: .agnosUnix.cpp.swp  CMakeLists.txt  agnos.hpp  agnosUnix.cpp  agnosWin32.cpp  readme.md
assets/: bewd.txt  config.txt
b/: CMakeCache.txt  Makefile  asciiPainter  cmake_install.cmake  newAscii.txt
b/agnos/: Makefile  cmake_install.cmake
